syntax = "proto3";

option csharp_namespace = "Replication.Grpc";

package payment;

import "google/protobuf/empty.proto";

// Individual payment
message PaymentInsertRpcParameters {
  string correlation_id = 1;
  string processor = 2;
  double amount = 3;
  string requested_at = 4; // ISO 8601 string
  string source_instance = 5;
}

// Batch of payments
message PaymentBatch {
  repeated PaymentInsertRpcParameters payments = 1;
}

service PaymentReplication {
  // New batch RPC
  rpc PublishPaymentsBatch(PaymentBatch) returns (google.protobuf.Empty);

  // Subscription remains streaming
  rpc SubscribeToPayments(google.protobuf.Empty) returns (stream PaymentInsertRpcParameters);

  // Clear payments
  rpc ClearPayments(google.protobuf.Empty) returns (google.protobuf.Empty);
}
